# ha-escpos-thermal-printer

./: CONTRIBUTING.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: dependabot-auto-sync.yml  hacs.yml  hassfest.yml  security.yml  validate.yml
custom_components/escpos_printer/: __init__.py  binary_sensor.py  capabilities.py  config_flow.py  const.py  device_action.py  diagnostics.py  manifest.json  notify.py  printer.py  security.py  services.py  services.yaml  strings.json  text_utils.py
custom_components/escpos_printer/translations/: en.json
docs/: CONFIGURATION.md  EXAMPLES.md  TROUBLESHOOTING.md
examples/: README.md  mealie_shopping_list_printer.yaml
scripts/: check_requirements_sync.py  framework_smoke_test.py  security_scan.py  sync_manifest_requirements.py
tests/: conftest.py  test_adapter_additional_paths.py  test_barcode_force_software.py  test_capabilities.py  test_config_flow.py  test_config_flow_negative.py  test_config_flow_options_and_duplicate.py  test_notify.py  test_notify_negative.py  test_optional_services_and_errors.py  test_security.py  test_services_image.py  test_services_negative.py  test_services_qr.py  test_services_text.py  test_text_utils.py
tests/integration_tests/: __init__.py  conftest.py
tests/integration_tests/emulator/: __init__.py  command_parser.py  error_simulator.py  printer_state.py  virtual_printer.py
tests/integration_tests/examples/: basic_usage_example.py
tests/integration_tests/fixtures/: __init__.py  conftest.py  mock_data_generator.py  verification_utils.py
tests/integration_tests/ha_environment/: __init__.py  ha_test_environment.py
tests/integration_tests/scenarios/: test_automation_integration.py  test_basic_functionality.py  test_edge_cases.py  test_error_handling.py  test_network_resilience.py  test_performance.py
