[project]
name = "ha-escpos-thermal-printer"
version = "0.3.1"
description = "Network thermal printer integration for Home Assistant using ESC/POS protocol"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
  "python-escpos==3.1",
  "Pillow==12.0.0",
  "qrcode==8.2",
  "python-barcode==0.16.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*", "scripts*"]

[project.optional-dependencies]
# Define pip extras so CI can install tooling via
# `pip install -e .[dev,security]`
dev = [
    "pytest==9.0.0",
    "pytest-homeassistant-custom-component==0.13.307",
    "mypy==1.19.1",
    "ruff==0.14.13",
    "pre-commit==4.5.1",
    "safety==3.7.0",
    "bandit==1.9.2",
    "pip-audit==2.10.0",
    "typer==0.21.1",
    "marshmallow==4.2.0",
    "aiohttp>=3.12.14",
    "cryptography>=46.0.2",
    "jinja2>=3.1.6",
    "requests>=2.32.4",
    "urllib3>=2.5.0",
]
security = [
  "safety==3.7.0",
  "bandit==1.9.2",
  "pip-audit==2.10.0",
  "ruff==0.14.13",
  "typer==0.21.1",
  "marshmallow==4.2.0",
  "aiohttp>=3.12.14",
  "cryptography>=46.0.2",
  "jinja2>=3.1.6",
  "requests>=2.32.4",
  "urllib3>=2.5.0",
]

[tool.pytest.ini_options]
addopts = "-q -m 'not integration'"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: tests requiring HA runtime and network sockets",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "I",      # isort
    "N",      # pep8-naming
    "AIR",    # flake8-airflow (airflow specific, but good general rules)
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
    "C4",     # flake8-comprehensions
    "T10",    # flake8-debugger
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "ERA",    # eradicate
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "NPY",    # numpy-specific rules
    "AIR",    # flake8-airflow
    "PERF",   # perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging-format
    "S",      # flake8-bandit (security)
    "G",      # flake8-logging-format (additional)
]
ignore = [
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "FBT001",  # boolean positional arg in function definition
    "FBT002",  # boolean default positional argument
    "FBT003",  # boolean positional arg in function call
    "A003",    # class attribute shadows a python builtin
    "COM812",  # missing trailing comma
    "ISC001",  # implicitly concatenated string literals
    "Q000",    # single quotes found but double quotes preferred
    "Q001",    # single quote multiline found but double quotes preferred
    "Q002",    # single quote docstring found but double quotes preferred
    "Q003",    # change outer quotes to avoid escaping inner quotes
    "S101",    # use of assert detected
    "S110",    # try/except/pass allowed in cleanup or callbacks
    "S104",    # possible binding to all interfaces
    "T201",    # print found
    "PD",      # pandas
    "NPY",     # numpy
    "RUF012",  # mutable class attributes
    "TRY003",  # avoid specifying long messages outside exception class
    "TRY400",  # use logging.exception instead of logging.error
    "ERA001",  # found commented-out code
    "FIX002",  # line contains TODO
    "TD002",   # missing author in TODO
    "TD003",   # missing issue link in TODO
    "INP001",  # file is part of implicit namespace package
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "S101",    # use of assert
    "S311",    # pseudo-random generators ok in tests
    "T201",    # print statements
    "PLR2004", # magic value comparisons
    "SLF001",  # private member access
    "G004",    # f-string in logging ok in tests
    "B017",    # blind exception assertion ok when testing error handling
    "PT011",   # pytest.raises too broad ok in some cases
    "PLC0415", # imports not at top-level ok for lazy loading in tests
    "TRY300",  # try-except-else ok in tests
    "TRY301",  # raise within try block
    "TRY401",  # redundant exception logging
    "N806",    # variable naming in test functions
    "PLR0915", # too many statements in test functions
    "PLR0912", # too many branches in test functions
    "PLR0911", # too many return statements
    "SIM117",  # nested with statements ok for pytest context
    "SIM105",  # contextlib.suppress in tests
    "F401",    # unused imports ok in __init__ files
    "F403",    # star imports ok in __init__ files
    "E402",    # module level import not at top
    "PLW0603", # global statement ok in test fixtures
    "PYI036",  # type annotation format
    "RUF022",  # __all__ sorting
    "B904",    # raise from in tests
]
"custom_components/escpos_printer/__init__.py" = ["BLE001"]
"custom_components/escpos_printer/printer.py" = ["BLE001", "C901"]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.escpos_printer"]
force-sort-within-sections = true

[tool.black]
line-length = 100
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
pretty = true
namespace_packages = false
exclude = [
    "^fix_mypy_errors\\.py$",
    "^fix_remaining_errors\\.py$",
    "^fix_final_14_errors\\.py$",
    "^fix_final_mypy_errors\\.py$",
]

[[tool.mypy.overrides]]
module = [
    "escpos.*",
    "PIL.*",
    "qrcode.*",
    "barcode.*",
    "pytest_homeassistant_custom_component.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["import-untyped", "no-untyped-def", "call-overload", "unused-ignore"]

[tool.coverage.run]
source = ["custom_components/escpos_printer"]
branch = true
parallel = true
sigterm = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/integration_tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "setup.py",
    "scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "import typing",
    "from typing import",
]
show_missing = true
skip_covered = false
skip_empty = false
precision = 2
fail_under = 85.0

[tool.coverage.html]
directory = "htmlcov"
title = "ESC/POS Thermal Printer Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"

[dependency-groups]
dev = [
    "pytest==9.0.0",
    "pytest-homeassistant-custom-component==0.13.307",
    "mypy==1.19.1",
    "ruff==0.14.13",
    "pre-commit==4.5.1",
    "safety==3.7.0",
    "bandit==1.9.2",
    "pip-audit==2.10.0",
    "typer==0.21.1",
    "marshmallow==4.2.0",
    "aiohttp>=3.12.14",
    "cryptography>=46.0.2",
    "jinja2>=3.1.6",
    "requests>=2.32.4",
    "urllib3>=2.5.0",
]
security = [
    "safety==3.7.0",
    "bandit==1.9.2",
    "pip-audit==2.10.0",
    "typer==0.21.1",
    "marshmallow==4.2.0",
    "aiohttp>=3.12.14",
    "cryptography>=46.0.2",
    "jinja2>=3.1.6",
    "requests>=2.32.4",
    "urllib3>=2.5.0",
]
